--- a/p8105_hw5_jck2183.md
+++ b/p8105_hw5_jck2183.md
@@ -147,317 +147,37 @@ prop_unsolved(city_nest$data[[1]])
     ## 1    0.386    0.337     0.438
 
 ``` r
-purrr::map(city_nest$data, prop_unsolved)
-```
+#purrr::map(city_nest$data, prop_unsolved)
 
-    ## [[1]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.386    0.337     0.438
-    ## 
-    ## [[2]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.383    0.353     0.415
-    ## 
-    ## [[3]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.646    0.628     0.663
-    ## 
-    ## [[4]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.462    0.414     0.511
-    ## 
-    ## [[5]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.434    0.399     0.469
-    ## 
-    ## [[6]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.505    0.465     0.545
-    ## 
-    ## [[7]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.612    0.569     0.654
-    ## 
-    ## [[8]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.300    0.266     0.336
-    ## 
-    ## [[9]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.736    0.724     0.747
-    ## 
-    ## [[10]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.445    0.408     0.483
-    ## 
-    ## [[11]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.530    0.500     0.560
-    ## 
-    ## [[12]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.481    0.456     0.506
-    ## 
-    ## [[13]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.542    0.485     0.598
-    ## 
-    ## [[14]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.588    0.569     0.608
-    ## 
-    ## [[15]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.366    0.310     0.426
-    ## 
-    ## [[16]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.464    0.422     0.507
-    ## 
-    ## [[17]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.347    0.305     0.391
-    ## 
-    ## [[18]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.507    0.489     0.526
-    ## 
-    ## [[19]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.449    0.422     0.477
-    ## 
-    ## [[20]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.511    0.482     0.540
-    ## 
-    ## [[21]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.408    0.380     0.437
-    ## 
-    ## [[22]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.414    0.388     0.441
-    ## 
-    ## [[23]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.413    0.363     0.464
-    ## 
-    ## [[24]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.490    0.469     0.511
-    ## 
-    ## [[25]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.453    0.412     0.495
-    ## 
-    ## [[26]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.319    0.296     0.343
-    ## 
-    ## [[27]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.605    0.569     0.640
-    ## 
-    ## [[28]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.361    0.333     0.391
-    ## 
-    ## [[29]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.511    0.459     0.563
-    ## 
-    ## [[30]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.362    0.329     0.398
-    ## 
-    ## [[31]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.649    0.623     0.673
-    ## 
-    ## [[32]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.388    0.349     0.427
-    ## 
-    ## [[33]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.536    0.504     0.569
-    ## 
-    ## [[34]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.485    0.447     0.524
-    ## 
-    ## [[35]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.413    0.365     0.463
-    ## 
-    ## [[36]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.448    0.430     0.466
-    ## 
-    ## [[37]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.551    0.518     0.584
-    ## 
-    ## [[38]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.534    0.494     0.573
-    ## 
-    ## [[39]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.263    0.223     0.308
-    ## 
-    ## [[40]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.370    0.321     0.421
-    ## 
-    ## [[41]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.429    0.395     0.463
-    ## 
-    ## [[42]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.618    0.558     0.675
-    ## 
-    ## [[43]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.380    0.335     0.426
-    ## 
-    ## [[44]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.507    0.468     0.545
-    ## 
-    ## [[45]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.467    0.404     0.532
-    ## 
-    ## [[46]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.540    0.515     0.564
-    ## 
-    ## [[47]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.599    0.552     0.645
-    ## 
-    ## [[48]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.457    0.388     0.527
-    ## 
-    ## [[49]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.331    0.293     0.371
-    ## 
-    ## [[50]]
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.438    0.411     0.465
-
-``` r
 unsolved_city <- city_nest %>% 
   mutate(prop_unsolved = purrr::map(data, prop_unsolved)) %>% 
   unnest() %>% 
   rename(CI_low = conf.low, 
-         CI_high = conf.high) %>% 
-  knitr::kable()
+         CI_high = conf.high)
 ```
 
     ## Warning: `cols` is now required when using unnest().
     ## Please use `cols = c(data, prop_unsolved)`
+
+  - Create a plot that shows the estimates and CIs for each city – check
+    out geom\_errorbar for a way to add error bars based on the upper
+    and lower limits. Organize cities according to the proportion of
+    unsolved homicides.
+
+<!-- end list -->
+
+``` r
+unsolved_city %>% 
+  mutate(city_state = fct_reorder(city_state, estimate)) %>% 
+  ggplot(aes(x = city_state, y = estimate)) + 
+  geom_point(color = "#A35E60") + 
+  geom_errorbar(aes(ymin = CI_low, ymax = CI_high)) + 
+  coord_flip() + 
+  labs(title = "Proportion of unsolved cases in 50 major US cities", 
+       y = "Proportion of unsolved cases", 
+       x = "City", 
+       caption = "Error bars represent 95% confidence interval") + 
+  theme_classic() 
+```
+
+![](p8105_hw5_jck2183_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
