--- a/p8105_hw5_jck2183.md
+++ b/p8105_hw5_jck2183.md
@@ -31,7 +31,7 @@ library(patchwork)
 <!-- end list -->
 
 ``` r
-murder <- 
+homicide <- 
   read_csv("https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv") %>% 
   janitor::clean_names()
 ```
@@ -59,32 +59,35 @@ homicide, the victims name, age, race, gender, city, state, longitude,
 latitude, and whether or not the case was solved.
 
 ``` r
-murder <- murder %>% 
-  unite("city_state", c("city", "state"), sep = ", ")
-
-# unsolved cases in a city
-unsolved <- murder %>% 
-  group_by(city_state) %>% 
-  filter(disposition %in% c("Closed without arrest", 
-                            "Open/No arrest")) %>% 
-  summarize(unsolved = n()) 
+homicide = 
+  read_csv("https://raw.githubusercontent.com/washingtonpost/data-homicides/master/homicide-data.csv") %>% 
+  mutate(
+    city_state = str_c(city, state, sep = "_"),
+    resolved = case_when(
+      disposition == "Closed without arrest" ~ "unsolved",
+      disposition == "Open/No arrest"        ~ "unsolved",
+      disposition == "Closed by arrest"      ~ "solved",
+    )
+  ) %>% 
+  select(city_state, resolved) %>% 
+  filter(city_state != "Tulsa_AL")
 ```
 
-    ## `summarise()` ungrouping output (override with `.groups` argument)
-
-``` r
-# sum of cases in a city
-total_cases <- murder %>% 
-  group_by(city_state) %>%
-  summarize(total = n())
-```
-
-    ## `summarise()` ungrouping output (override with `.groups` argument)
-
-``` r
-# join previous data sets
-all_cases <- left_join(unsolved, total_cases, by = "city_state")
-```
+    ## Parsed with column specification:
+    ## cols(
+    ##   uid = col_character(),
+    ##   reported_date = col_double(),
+    ##   victim_last = col_character(),
+    ##   victim_first = col_character(),
+    ##   victim_race = col_character(),
+    ##   victim_age = col_character(),
+    ##   victim_sex = col_character(),
+    ##   city = col_character(),
+    ##   state = col_character(),
+    ##   lat = col_double(),
+    ##   lon = col_double(),
+    ##   disposition = col_character()
+    ## )
 
   - For the city of Baltimore, MD, use the prop.test function to
     estimate the proportion of homicides that are unsolved; save the
@@ -95,31 +98,16 @@ all_cases <- left_join(unsolved, total_cases, by = "city_state")
 <!-- end list -->
 
 ``` r
-prop_unsolved <- function(df) {
-
-  # uses unsolved and total columns in data set
-  city_unsolved <- prop.test(df$unsolved, df$total)
-  
-  # putting estimate and bounds in a nice data set
-  broom::tidy(city_unsolved) %>% 
-    select(estimate, conf.low, conf.high)
-}
-
-all_cases %>% 
-  filter(city_state == "Baltimore, MD") %>% 
-  prop_unsolved() %>% 
-  mutate(estimate = round(estimate, 3), 
-         conf.low = round(conf.low, 3), 
-         conf.high = round(conf.high, 3)) %>% 
-  rename(Estimate = estimate, 
-         "Lower bound" = conf.low, 
-         "Upper bound" = conf.high) %>% 
-  knitr::kable()
+aggregate_df = 
+  homicide %>% 
+  group_by(city_state) %>% 
+  summarize(
+    hom_total = n(),
+    hom_unsolved = sum(resolved == "unsolved")
+  )
 ```
 
-| Estimate | Lower bound | Upper bound |
-| -------: | ----------: | ----------: |
-|    0.646 |       0.628 |       0.663 |
+    ## `summarise()` ungrouping output (override with `.groups` argument)
 
   - Now run prop.test for each of the cities in your dataset, and
     extract both the proportion of unsolved homicides and the confidence
@@ -131,33 +119,28 @@ all_cases %>%
 <!-- end list -->
 
 ``` r
-city_nest <- nest(all_cases, unsolved:total)
+prop.test(
+  aggregate_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_unsolved), 
+  aggregate_df %>% filter(city_state == "Baltimore_MD") %>% pull(hom_total)) %>% 
+  broom::tidy()
 ```
 
-    ## Warning: All elements of `...` must be named.
-    ## Did you want `data = c(unsolved, total)`?
+    ## # A tibble: 1 x 8
+    ##   estimate statistic  p.value parameter conf.low conf.high method    alternative
+    ##      <dbl>     <dbl>    <dbl>     <int>    <dbl>     <dbl> <chr>     <chr>      
+    ## 1    0.646      239. 6.46e-54         1    0.628     0.663 1-sample… two.sided
 
 ``` r
-prop_unsolved(city_nest$data[[1]])
+results_df = 
+  aggregate_df %>% 
+  mutate(
+    prop_tests = map2(.x = hom_unsolved, .y = hom_total, ~prop.test(x = .x, n = .y)),
+    tidy_tests = map(.x = prop_tests, ~broom::tidy(.x))
+  ) %>% 
+  select(-prop_tests) %>% 
+  unnest(tidy_tests) %>% 
+  select(city_state, estimate, conf.low, conf.high)
 ```
-
-    ## # A tibble: 1 x 3
-    ##   estimate conf.low conf.high
-    ##      <dbl>    <dbl>     <dbl>
-    ## 1    0.386    0.337     0.438
-
-``` r
-#purrr::map(city_nest$data, prop_unsolved)
-
-unsolved_city <- city_nest %>% 
-  mutate(prop_unsolved = purrr::map(data, prop_unsolved)) %>% 
-  unnest() %>% 
-  rename(CI_low = conf.low, 
-         CI_high = conf.high)
-```
-
-    ## Warning: `cols` is now required when using unnest().
-    ## Please use `cols = c(data, prop_unsolved)`
 
   - Create a plot that shows the estimates and CIs for each city – check
     out geom\_errorbar for a way to add error bars based on the upper
@@ -167,17 +150,259 @@ unsolved_city <- city_nest %>%
 <!-- end list -->
 
 ``` r
-unsolved_city %>% 
+results_df %>% 
   mutate(city_state = fct_reorder(city_state, estimate)) %>% 
-  ggplot(aes(x = city_state, y = estimate)) + 
+  ggplot(aes(x = city_state, y = estimate)) +
   geom_point(color = "#A35E60") + 
-  geom_errorbar(aes(ymin = CI_low, ymax = CI_high)) + 
-  coord_flip() + 
+  geom_errorbar(aes(ymin = conf.low, ymax = conf.high)) + 
   labs(title = "Proportion of unsolved cases in 50 major US cities", 
        y = "Proportion of unsolved cases", 
        x = "City", 
        caption = "Error bars represent 95% confidence interval") + 
-  theme_classic() 
+  theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust = 1))
 ```
 
 ![](p8105_hw5_jck2183_files/figure-gfm/unnamed-chunk-5-1.png)<!-- -->
+
+# Problem 2
+
+This zip file contains data from a longitudinal study that included a
+control arm and an experimental arm. Data for each participant is
+included in a separate file, and file names include the subject ID and
+arm.
+
+Create a tidy dataframe containing data from all participants, including
+the subject ID, arm, and observations over time:
+
+  - Start with a dataframe containing all file names; the list.files
+    function will help.
+
+<!-- end list -->
+
+``` r
+file_names <- list.files("./data/", full.names = TRUE)
+
+df <- file_names %>% 
+  map(read_csv) 
+```
+
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
+    ## Parsed with column specification:
+    ## cols(
+    ##   week_1 = col_double(),
+    ##   week_2 = col_double(),
+    ##   week_3 = col_double(),
+    ##   week_4 = col_double(),
+    ##   week_5 = col_double(),
+    ##   week_6 = col_double(),
+    ##   week_7 = col_double(),
+    ##   week_8 = col_double()
+    ## )
