--- a/p8105_hw5_jck2183.md
+++ b/p8105_hw5_jck2183.md
@@ -180,10 +180,13 @@ the subject ID, arm, and observations over time:
 <!-- end list -->
 
 ``` r
-file_names <- list.files("./data/", full.names = TRUE)
-
-df <- file_names %>% 
-  map(read_csv) 
+path_df = 
+  tibble(
+    path = list.files("./data")
+  ) %>% 
+  mutate(
+    path = str_c("data/", path), 
+    data = map(.x = path, .f = read_csv))
 ```
 
     ## Parsed with column specification:
@@ -406,3 +409,48 @@ df <- file_names %>%
     ##   week_7 = col_double(),
     ##   week_8 = col_double()
     ## )
+
+``` r
+study_df = path_df %>% pull(data)
+```
+
+  - Tidy the result; manipulate file names to include control arm and
+    subject ID, make sure weekly observations are “tidy”, and do any
+    other tidying that’s necessary
+
+<!-- end list -->
+
+``` r
+for (i in 1:20) {
+  if (i < 11) {
+    study_df[[i]] <- study_df[[i]] %>% 
+    mutate(arm = "Control", 
+           subject_id = i)
+  } else if (i > 10) {
+    study_df[[i]] <- study_df[[i]] %>% 
+    mutate(arm = "Experimental", 
+             subject_id = i - 10)
+  }
+}
+```
+
+``` r
+result_study_df =
+  bind_rows(study_df) %>% 
+  gather(key = week, value = obs, week_1:week_8) %>% 
+  arrange(week, subject_id) %>% 
+  separate(col = week, into = c("delete", "week")) %>% 
+  select(-delete)
+
+head(result_study_df)
+```
+
+    ## # A tibble: 6 x 4
+    ##   arm          subject_id week    obs
+    ##   <chr>             <dbl> <chr> <dbl>
+    ## 1 Control               1 1      0.2 
+    ## 2 Experimental          1 1      3.05
+    ## 3 Control               2 1      1.13
+    ## 4 Experimental          2 1     -0.84
+    ## 5 Control               3 1      1.77
+    ## 6 Experimental          3 1      2.15
