--- a/p8105_hw5_jck2183.Rmd
+++ b/p8105_hw5_jck2183.Rmd
@@ -137,3 +137,24 @@ result_study_df =
 head(result_study_df)
 ```
 
+- Make a spaghetti plot showing observations on each subject over time, and comment on differences between groups.
+
+```{r}
+result_study_df %>% 
+  mutate(week = as.double(week), 
+         subject_id = as.character(subject_id)) %>% 
+  group_by(arm, subject_id) %>% 
+  ggplot(aes(x = week, y = obs, color = arm, type = subject_id)) + 
+    geom_line() + 
+  theme_bw() + 
+  labs(title = "Trends in observations across study period for each\n participant stratified by study arm",
+       x = "Week", 
+       y = "Observation") + 
+  viridis::scale_color_viridis(name = "Study arm",
+                               discrete = TRUE) + 
+  theme(legend.position = "bottom", 
+        legend.direction = "horizontal", 
+        legend.box.spacing = unit(0.05, "cm"),
+        plot.title = element_text(size = 11))
+```
+
