--- a/p8105_hw5_jck2183.md
+++ b/p8105_hw5_jck2183.md
@@ -454,3 +454,29 @@ head(result_study_df)
     ## 4 Experimental          2 1     -0.84
     ## 5 Control               3 1      1.77
     ## 6 Experimental          3 1      2.15
+
+  - Make a spaghetti plot showing observations on each subject over
+    time, and comment on differences between groups.
+
+<!-- end list -->
+
+``` r
+result_study_df %>% 
+  mutate(week = as.double(week), 
+         subject_id = as.character(subject_id)) %>% 
+  group_by(arm, subject_id) %>% 
+  ggplot(aes(x = week, y = obs, color = arm, type = subject_id)) + 
+    geom_line() + 
+  theme_bw() + 
+  labs(title = "Trends in observations across study period for each\n participant stratified by study arm",
+       x = "Week", 
+       y = "Observation") + 
+  viridis::scale_color_viridis(name = "Study arm",
+                               discrete = TRUE) + 
+  theme(legend.position = "bottom", 
+        legend.direction = "horizontal", 
+        legend.box.spacing = unit(0.05, "cm"),
+        plot.title = element_text(size = 11))
+```
+
+![](p8105_hw5_jck2183_files/figure-gfm/unnamed-chunk-9-1.png)<!-- -->
